# SIFDecode

./: .cirrus.yml  .gitignore  .travis.yml  LICENSE  README.md  install_sifdecode  meson.build  uninstall_sifdecode  update_sifdecode  version
.github/julia/: build_tarballs.jl  generate_binaries.jl
.github/workflows/: ci.yml  meson.yml  release.yml  sif_database.yml  sifdecoder.yml
doc/: README  TODO
doc/src/: sif.tex
html/: index.html
html/classification/: index.html
html/sets/: marmes.html  mastsif.html
html/sif/: footnode.html  index.html  node1.html  node10.html  node11.html  node12.html  node13.html  node14.html  node15.html  node16.html  node17.html  node18.html  node19.html  node2.html  node20.html  node21.html  node22.html  node23.html  node24.html  node25.html  node26.html  node27.html  node28.html  node29.html  node3.html  node30.html  node31.html  node32.html  node33.html  node34.html  node35.html  node36.html  node37.html  node38.html  node39.html  node4.html  node40.html  node41.html  node42.html  node43.html  (+20 more)
man/man1/: classall.1  classify.1  makedocs  select.1  sifdecoder.1  sifdecoder_standalone.1
sif/: KISSING2.SIF
src/: makemaster
src/check/: check_derivs.f90  check_derivs_main.f90  makemaster  meson.build  random.f90
src/decode/: makemaster  meson.build  sifdecode.f90  sifdecode_main.f90  sifdecoder_standalone.f90  sifdecoder_standalone_main.f90
src/select/: clsf.f  makemaster  meson.build  slct.f  slct_new.f  slct_old.f
test/: compare.sh  convert.sed
